Create Joni home key solution
